--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       args:
         - PORT=${PORT}
-      dockerfile: ./docker/api/Dockerfile
+      dockerfile: ./docker/Dockerfile
     volumes:
       - ./:/go/src/github.com/karamaru-alpha/grpc-sample
     ports:
